--- a/style.sty
+++ b/style.sty
@@ -1,6 +1,6 @@
 % Otsikko sivu
 \title{Mallipohja}
-\author{Mika R} % \thanks{Specialist}
+\author{Mika K-L} % \thanks{Specialist}
 \date{} % January 2021 | 14.3.2018
 
 % kieliasetukset suomelle
